# VECTAETOS

./: .gitignore  ARCHITECTURE.md  BRAND_NOTICE.md  BibTeX  CANONICAL_AXIOMS.json  CANONICAL_STATUS.md  CITATION.cff  CNAME  CODEOWNERS.md  DRIFT_LEDGER.md  EK_ADVERSARIAL_SCENARIO_CATALOG.md  EK_ADVERSARIAl.md  EK_COMPLIANCE_GUARD_RULES.md  EMPIRICAL_EVIDENCE_ROADMAP_ANCHOR.md  EMPIRICAL_SAFETY_PRIOR.md  EMPIRICKÁ_PRIORITA_BEZPEČNOSTI.md  EPISTEMIC_CRYPTOGRAPHY_INTEGRATION.md  EPISTEMIC_CRYPTOGRAPHY_UNIFIED_RECONCILIATION.md  FORMAL_META_MATHEMATICS_v1.1.md  FUNDING.yml  INTERNAL_NOTE.txt  LICENCE.md  LICENSE.md  METAMATEMATICS_CO_SA_DEJE..docx  METAMATH.md  METAMATHEMATICS.md  Math_appendix.md  NOTICE.md  ORCID.html  PHI_SECURITY_TEST_PLAN.md  README.md  READ_THIS_FIRST.md  RESEARCH_INDEX.md  SECURITY.md  SYSTEM_MAP.md  TERMINATOR_PROBLEM.md  TRADEMARK_POLICY.md  TRIADIC_ARCHITECTURE.md  TRIADIC_REPOSITORY_ANCHOR.md  UNIFIED_ARCHITECTURE.md  (+37 more)
.github/: CODEOWNERS  CODEOWNERS.md  FUNDING.yml  README.md  vortex_test.yml
Core/: README.md  VORTEX_CORE_STATUS.md  epistemic.py  identity.py  identity_registry.py  ontology_binding.py  proof.py  registry.py  replay.py  signature.py  validator.py  vortex_pipeline.py  vortex_rmk_pipeline.py
EAI/: README.md  delta.py  encode_v3.py  implementation.py  kappa.py  spectral.py
LICENSES/: AEPL-2.0-VECTAETOS.md  LICENCNY_STACK.md  LICENSE.md  LICENSE_STACK.md  (+9 more)
research/lsp/: README.md  STATUS.md  VECTAETOS_CODE_SENTINEL_LSP_PROPOSAL.md  pyproject.toml  vectaetos_lsp.py  vectaetos_skeleton.py
research/lsp/tests/: test_contract.py
(+526 files in other folders)
