[project]
name = "vectaetos-code-sentinel-lsp"
version = "0.3.0"
description = "Research-only advisory LSP prototype for possible VECTAETOS semantic drift diagnostics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pygls",
  "lsprotocol",
  "jedi",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PTH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
